2008-08-26  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: Generate an XML documentation file, extracting the documentation
	  generated by mklambda.
	* doc/ (svn:ignore): Ignore generated files.
	* doc/Makefile.include: Import the documentation generated by gmcs into
	  monodoc format.
	* doc/en/**: Flush.
	* mklambda: Generate inline XML documentation; change parameter names to
	  simplify documentation generation.
	* Generator.cs: Add new methods to assist XML documentation generation.

2008-08-19  Jonathan Pryor  <jpryor@novell.com>

	* mkcurry: Add Tuple overloads for each Curry function, such that
	  a.Curry(1,2) is equivalent to a.Curry(Tuple.Create(1,2)).

2008-08-19  Jonathan Pryor  <jpryor@novell.com>

	* mklambda: Generate RecFunc() methods.
	* Makefile: Improve dependency checking for Mono.Rocks.Tests.dll.

2008-08-19  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: mklambda should generate Lambdas.cs.
	* mklambda.cs: Make Lambda a partial class.
	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add Mono.Rocks/Lambdas.cs 
	  to the build.

2008-08-19  Jonathan Pryor  <jpryor@novell.com>

	* Generator.pm: Added; utility type for C# source generation.
	* mkcurry: Added; generator for Mono.Rocks/Curry.cs
	* mklambda, mktuple: Refactor/rewrite using Generator.pm.
	* Makefile: Generate Mono.Rocks/Curry.cs.
	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add Mono.Rocks/Curry.cs 
	  to the build.
	* Mono>Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
	  Tests/Mono.Rocks.Tests/CurryTest.cs to the build.

2008-08-17  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.csproj, Mono.Rocks.dll.sources: Add Lambda.cs to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
	  LambdaTest.cs to the build.
	* Makefile: Generate Mono.Rocks/Lambda.cs from mklambda.
	* mklambda: Added; Lambda.cs generation program.

2008-08-17  Jonathan Pryor  <jpryor@novell.com>

	* . (svn:ignore): Add files to ignore.