@@ -1,5 +1,9 @@
 2008-08-26  Jonathan Pryor  <jpryor@novell.com>
 
+	* doc/en/index.xml: Flush.
+
+2008-08-26  Jonathan Pryor  <jpryor@novell.com>
+
 	* Makefile: Generate an XML documentation file, extracting the documentation
 	  generated by mklambda.
 	* doc/ (svn:ignore): Ignore generated files.
